test/indexOutOfBounds4.slq
// args: --run

def main(){
	x:=(0,0,0):ğ”¹^3;
	x[3]:=H(x[3]); // error
	return x;
}
